--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components  {
+    .input{
+        @apply py-3 px-4 rounded-xl border-2 border-cosBorder 
+         transition-all duration-300 
+        placeholder-cosInputText max-w-40
+        w-full focus:outline-none mb-1.5
+    }
+    .options{
+        @apply text-optionsColor;
+    }
+}
