--- a/tailwind.css
+++ b/tailwind.css
@@ -2,6 +2,9 @@
 @plugin "tailwindcss-animate";
 @source "./node_modules/@zayne-labs/ui-react/dist/esm/**/*.js";
 
+/* ------------------*/
+/* Main Theme        */
+/*-------------------*/
 @theme {
 	/* Breakpoints */
 	--breakpoint-*: initial;
@@ -17,27 +20,6 @@
 	/* App Colors */
 	--color-school-blue: hsl(202, 98%, 43%);
 	--color-school-gray: hsl(313, 0%, 42%);
-
-	/* Shadcn  Colors */
-	--color-shadcn-background: hsl(0 0% 100%);
-	--color-shadcn-foreground: hsl(222.2 84% 4.9%);
-	--color-shadcn-muted: hsl(210 40% 96.1%);
-	--color-shadcn-muted-foreground: hsl(215.4 16.3% 46.9%);
-	--color-shadcn-popover: hsl(0 0% 100%);
-	--color-shadcn-popover-foreground: hsl(222.2 84% 4.9%);
-	--color-shadcn-card: hsl(0 0% 100%);
-	--color-shadcn-card-foreground: hsl(222.2 84% 4.9%);
-	--color-shadcn-border: hsl(214.3 31.8% 91.4%);
-	--color-shadcn-input: hsl(214.3 31.8% 91.4%);
-	--color-shadcn-primary: hsl(222.2 47.4% 11.2%);
-	--color-shadcn-primary-foreground: hsl(210 40% 98%);
-	--color-shadcn-secondary: hsl(210 40% 96.1%);
-	--color-shadcn-secondary-foreground: hsl(222.2 47.4% 11.2%);
-	--color-shadcn-accent: hsl(210 40% 96.1%);
-	--color-shadcn-accent-foreground: hsl(222.2 47.4% 11.2%);
-	--color-shadcn-destructive: hsl(0 84.2% 60.2%);
-	--color-shadcn-destructive-foreground: hsl(210 40% 98%);
-	--color-shadcn-ring: hsl(222.2 84% 4.9%);
 
 	/* Animations */
 	--animate-accordion-down: accordion-down 0.2s ease-out;
@@ -95,6 +77,41 @@
 			transform: translateX(-0.6rem);
 		}
 	}
+}
+
+/* ------------------*/
+/* Shadcn Theme      */
+/*-------------------*/
+@theme {
+	--color-shadcn-background: hsl(0, 0%, 100%);
+	--color-shadcn-foreground: hsl(222.2, 47.4%, 11.2%);
+
+	--color-shadcn-primary: hsl(222.2, 47.4%, 11.2%);
+	--color-shadcn-primary-foreground: hsl(210, 40%, 98%);
+
+	--color-shadcn-secondary: hsl(210, 40%, 96.1%);
+	--color-shadcn-secondary-foreground: hsl(222.2, 47.4%, 11.2%);
+
+	--color-shadcn-popover: hsl(0, 0%, 100%);
+	--color-shadcn-popover-foreground: hsl(222.2, 47.4%, 11.2%);
+
+	--color-shadcn-accent: hsl(210, 40%, 96.1%);
+	--color-shadcn-accent-foreground: hsl(222.2, 47.4%, 11.2%);
+
+	--color-shadcn-muted: hsl(210, 40%, 96.1%);
+	--color-shadcn-muted-foreground: hsl(215.4, 16.3%, 46.9%);
+
+	--color-shadcn-input: hsl(214.3, 31.8%, 91.4%);
+	--color-shadcn-border: hsl(214.3, 31.8%, 91.4%);
+	--color-shadcn-ring: hsl(215, 20.2%, 65.1%);
+
+	--color-sonner-success-bg: hsl(150, 100%, 6%);
+	--color-sonner-success-text: hsl(150, 100%, 90%);
+	--color-sonner-success-border: hsl(147, 100%, 12%);
+
+	--color-sonner-error-bg: hsl(358, 76%, 10%);
+	--color-sonner-error-text: hsl(358, 100%, 81%);
+	--color-sonner-error-border: hsl(357, 89%, 16%);
 }
 
 /* ------------------*/
