--- a/tailwind.css
+++ b/tailwind.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@plugin "tailwindcss-animate";
+@import "tw-animate-css";
 @source "./node_modules/@zayne-labs/ui-react/dist/esm/**/*.js";
 
 /* ------------------*/
@@ -146,19 +146,19 @@
 /*-------------------*/
 @layer base {
 	:root {
-		--chart-1: 202 98% 43%;
-		--chart-2: 0 100% 71%;
-		--chart-3: 197 37% 24%;
-		--chart-4: 43 74% 66%;
-		--chart-5: 27 87% 67%;
+		--chart-1: hsl(202, 98%, 43%);
+		--chart-2: hsl(0, 100%, 71%);
+		--chart-3: hsl(197, 37%, 24%);
+		--chart-4: hsl(43, 74%, 66%);
+		--chart-5: hsl(27, 87%, 67%);
 	}
 
 	.dark {
-		--chart-1: 220 70% 50%;
-		--chart-2: 160 60% 45%;
-		--chart-3: 30 80% 55%;
-		--chart-4: 280 65% 60%;
-		--chart-5: 340 75% 55%;
+		--chart-1: hsl(220, 70%, 50%);
+		--chart-2: hsl(160, 60%, 45%);
+		--chart-3: hsl(30, 80%, 55%);
+		--chart-4: hsl(280, 65%, 60%);
+		--chart-5: hsl(340, 75%, 55%);
 	}
 }
 
