--- a/tailwind.css
+++ b/tailwind.css
@@ -182,6 +182,11 @@
 
 	html {
 		scroll-behavior: smooth;
+		-webkit-tap-highlight-color: transparent;
+		font-synthesis: none;
+		text-rendering: optimizeLegibility;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
 	}
 
 	input:focus-visible {
