--- a/tailwind.css
+++ b/tailwind.css
@@ -3,6 +3,21 @@
 @import "@zayne-labs/ui-react/css/preset.css";
 
 /* ------------------*/
+/* App Colors        */
+/*-------------------*/
+@theme {
+	--color-210-100-13: hsl(210, 100%, 13%);
+	--color-210-79-44: hsl(210, 79%, 44%);
+	--color-201-100-9: hsl(201, 100%, 9%);
+
+	--color-school-blue: hsl(209, 97%, 50%);
+	--color-school-body-color: hsl(0, 0%, 20%);
+	--color-school-gray: hsl(313, 0%, 42%);
+	--color-school-gray-lighter: hsl(0, 0%, 76%);
+	--color-school-dark-blue: hsl(201, 100%, 4%);
+}
+
+/* ------------------*/
 /* Main Theme        */
 /*-------------------*/
 @theme {
@@ -16,13 +31,6 @@
 	/* Fonts */
 	--font-montserrat: "Montserrat", sans-serif;
 	--font-outfit: "Outfit", sans-serif;
-
-	/* App Colors */
-	--color-school-blue: hsl(209, 97%, 50%);
-	--color-school-body-color: hsl(0, 0%, 20%);
-	--color-school-gray: hsl(313, 0%, 42%);
-	--color-school-gray-lighter: hsl(0, 0%, 76%);
-	--color-school-dark-blue: hsl(201, 100%, 4%);
 
 	/* Animations */
 	--animate-accordion-down: accordion-down 0.2s ease-out;
@@ -257,5 +265,26 @@
 @utility scrollbar-hidden {
 	&::-webkit-scrollbar {
 		display: none;
+	}
+}
+
+@utility custom-select {
+	& {
+		appearance: none;
+		display: grid;
+		grid-template-areas: "select";
+		align-items: center;
+		position: relative;
+	}
+
+	&::after {
+		position: absolute;
+		content: "";
+		top: 14px;
+		right: 10px;
+		width: 0;
+		height: 0;
+		border: 6px solid transparent;
+		border-color: #fff transparent transparent transparent;
 	}
 }
